--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,8 +12,16 @@
 
 @font-face {
   font-family: 'Fredoka';
-  src: url('/fonts/Fredoka-Medium.ttf') format('truetype');
+  src: url('/fonts/Fredoka-Regular.ttf') format('truetype');
   font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Fredoka';
+src: url('/fonts/Fredoka-Medium.ttf') format('truetype');
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
